manifest/objects/ALTF__Account_Plan_Opportunity__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__Account_Opportunity__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Account Opportunity</label>
        <referenceTo>ALTF__Account_Opportunity__c</referenceTo>
        <relationshipLabel>Altify Account Plan Opportunities</relationshipLabel>
        <relationshipName>Account_Plan_Opportunties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__Account_Plan_Row__c</fullName>
        <label>Account Plan Row</label>
        <referenceTo>ALTF__Account_Plan_Row__c</referenceTo>
        <relationshipName>Altify_Account_Plan_Rows</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Altify Account Plan Opportunity</label>
    <nameField>
        <label>Altify Account Plan Opportunity</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Account Plan Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>